<resources>
    <string name="app_name">LinkenUp</string>
    <string name="client">Cliente</string>
    <string name="preferences">Preferências</string>
    <string name="preference_homelayout_title">Navegação na tela principal</string>
    <string name="preference_homelayout_img_option">Imagens</string>
    <string name="preference_homelayout_btn_option">Botões</string>
    <string name="preference_homelayout_smallimg_option">Ícones pequenos</string>
    <string name="theme">Tema</string>
    <string name="address">Endereço</string>
    <string name="ce">Cadastro Estadual (CE)</string>
    <string name="name">Nome</string>
    <string name="cnpj">CNPJ</string>
    <string name="confirm">Confirmar</string>
    <string name="register">Registrar</string>
    <string name="newclient">Novo Cliente</string>
    <string name="newworker">Novo Funcionario</string>
    <string name="rg">RG</string>
    <string name="cpf">CPF</string>
    <string name="ctps">CTPS</string>
    <string name="profession">Profissão</string>
    <string name="nationality">Nacionalidade</string>
    <string name="civilstate">Estado Civil</string>
    <string name="contracts">Contratos</string>
    <string name="map">Mapa</string>
    <string name="software">Software</string>
    <string name="screens">Telas</string>
    <string name="newsoftware">Novo Software</string>
    <string name="description">Descrição</string>
    <string name="supports">Atividades de Suporte</string>
    <string name="client_insert_message">Novo Cliente:\nID: %id\n%name\n%cnpj</string>
    <string name="worker">Funcionario</string>
    <string name="no_clientextra_message">Erro, o ID de usuario não foi passado corretamente</string>
    <string name="no_workerextra_message">Erro, o ID de funcionario não foi passado corretamente</string>
    <string name="no_softwareextra_message">Erro, o ID de software não foi passado corretamente</string>
    <string name="no_contractextra_message">Erro, o ID de contrato não foi passado corretamente</string>
    <string name="no_directorextra_message">Erro, o registro do diretor não foi passado corretamente</string>
    <string name="no_screenextra_message">Erro, o registro de tela não foi passado corretamente</string>
    <string name="register_backsafe_message">Dados não salvos serão perdidos.\nClique novamente para confirmar.</string>
    <string name="id">ID</string>
    <string name="change">Alterar</string>
    <string name="clientinsert_cnpj_notunique_message">Erro, o CNPJ já está registrado</string>
    <string name="insert_cpf_notunique_message">Erro, o CPF já está registrado</string>
    <string name="contract">Contrato</string>
    <string name="newdirector">Novo Diretor</string>
    <string name="software_insert_message">Novo Software:\nID: %id\n%name</string>
    <string name="screen_modeextra_message">Erro, o modo de software nao foi passado corretamente</string>
    <string name="newscreen">Nova Tela</string>
    <string name="functions">Funcionalidades</string>
    <string name="screen_insert_message">Nova tela:\nID: %id\n%name\nSoftware:\nID: %fk</string>
    <string name="screen_add_message">Nova tela atribuída</string>
    <string name="no_screen_insert_message">Atribua ao menos uma Tela ao Software</string>
    <string name="newcontract">Novo Contrato</string>
    <string name="director">Diretor</string>
    <string name="consultant">Consultor</string>
    <string name="workerdirector">Nosso Diretor</string>
    <string name="local">Local</string>
    <string name="worker_insert_message">Novo funcionario:\nID: %id\n%name\nCPF:%cpf</string>
    <string name="no_clientfound_message">Nenhum cliente foi encontrado</string>
    <string name="no_workerfound_message">Nenhum funcionario foi encontrado</string>
    <string name="directors">Diretores</string>
    <string name="no_screenfound_message">Nenhuma tela foi encontrada</string>
    <string name="bank">Banco</string>
    <string name="agency">Agência</string>
    <string name="account">Conta corrente</string>
    <string name="invalid_id_message">ID inválido</string>
    <string name="contract_linked_client">Cliente atribuido</string>
    <string name="contract_linked_software">Software atribuido</string>
    <string name="contract_linked_director">Diretor atribuido</string>
    <string name="contract_director_nullclient_message">Antes de prosseguir, escolha um cliente</string>
    <string name="contract_linked_consultant">Consultor atribuido</string>
    <string name="monthValue">Valor mensal</string>
    <string name="insert_all_message">Preencha todos os campos de forma válida</string>
    <string name="contract_insert_message">Novo Contrato:\nID: %id\n%client\n%software</string>
    <string name="send">Enviar</string>
    <string name="invalid_clientaddress_message">O endereço do cliente é invalido e não pode ser tratado.</string>
    <string name="invalid_directoraddress_message">O endereço do diretor do cliente é inválido e não pode ser tratado.</string>
    <string name="cosultant_time">Agendamento do consultor:</string>
    <string name="daysPweek">Dias/Semana:</string>
    <string name="hoursPday">Horas/Dia:</string>
    <string name="begin">Inicio:</string>
    <string name="end">Fim:</string>
    <string name="attach_screens_question">Anexar imagens de tela?</string>
    <string name="no">Não</string>
    <string name="yes">Sim</string>
    <string name="remove">Remover</string>
    <string name="invalid_workerDirectoraddress_message">Endereço do funcionario diretor e inválido e nao pode ser tratado</string>
    <string name="remove_failed_message">Erro ao tentar deletar o registro</string>
    <string name="remove_success_message">O registro foi excluido</string>
    <string name="remove_contract_director">O respectvo diretor sera excluido, prosseguir?\nID: %id\n%name</string>
    <string name="remove_multiple_success">Todas as exclusoes foram bem sucedidas</string>
    <string name="image_error_message">Erro no referenciamento de imagem</string>
    <string name="update_failed_message">Erro ao atualizar registro.</string>
    <string name="update_success_message">Registro atualizado com êxito</string>
    <string name="contract_template_notfound">(NÃO ENCONTRADO)</string>
    <string name="about_us">Sobre nós</string>
    <string name="search">Buscar</string>
    <string name="screen">Tela</string>
    <string name="search_worker_as_message">Procurar funcionario como:</string>
    <string name="invalid_workeraddress_message">O endereço do diretor do funcionario é inválido e não pode ser tratado.</string>
    <string name="sqlitesafe_message">ATENCAO, essa açao apagara todos os registros, clique novamente para confirmar</string>
    <string name="erase_sqlite">Apagar registros</string>
    <string name="red">Vermelho</string>
    <string name="green">Verde</string>
    <string name="blue">Azul</string>
    <string name="imageBorder">Borda de imagem (telas)</string>
    <string name="floatHome">Botão flutuante de navegação</string>
    <string name="clients">Clientes</string>
    <string name="cannot_decode_address">Nao foi possivel decodificar a localizaçao</string>
    <string name="team">Nossa equipe</string>
    <string name="us_address">Rua Guaipá, 678 - Vila Leopoldina, São Paulo - SP</string>
    <string name="us_email">linkenupdev@gmail.com</string>
    <string name="contact">Contato</string>
    <string name="us_git">https://github.com/linkenup</string>
    <string name="github">Github</string>
    <string name="edit_client">Editar Cliente</string>
    <string name="edit_contract">Editar Contrato</string>
    <string name="edit_director">Editar Diretor</string>
    <string name="edit_screen">Editar Tela</string>
    <string name="edit_software">Editar Software</string>
    <string name="edit_worker">Editar Funcionario</string>
    <string name="insert_old_message">Inserindo registros iniciais...</string>
</resources>