<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/us_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/Theme.LinkenUp.ToolBar"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        app:titleTextColor="?attr/colorOnPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/us_paddingBottom"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cropToPadding="true"
                android:padding="@dimen/us_image_padding"
                app:srcCompat="@drawable/drawable_logo" />

            <TextView
                style="@style/Title"
                android:layout_margin="@dimen/us_title_margin"
                android:text="@string/about_us"
                />

            <TextView
                style="@style/Field"
                android:text="@string/team"
                android:textIsSelectable="false"
                android:textSize="@dimen/subtitle_textSize" />

            <TextView
                android:id="@+id/us_text_team_names"
                style="@style/Field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_names" />
            <TextView
                android:text="@string/address"
                style="@style/Field"
                android:layout_marginBottom="0dp"
                android:textSize="@dimen/subtitle_textSize"/>

            <TextView
                style="@style/Field"
                android:autoLink="map"
                android:onClick="onMap"
                android:text="@string/us_address"/>

            <TextView
                android:text="@string/contact"
                style="@style/Field"
                android:layout_marginBottom="0dp"
                android:textSize="@dimen/subtitle_textSize"/>

            <TextView
                style="@style/Field"
                android:autoLink="email"
                android:text="@string/us_email"/>

            <TextView
                android:text="@string/github"
                style="@style/Field"
                android:layout_marginBottom="0dp"
                android:textSize="@dimen/subtitle_textSize"/>

            <TextView
                style="@style/Field"
                android:autoLink="web"
                android:text="@string/us_git"/>

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/include_home_floatbutton" />

</LinearLayout>