<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:onClick="onHomeLayout"
    android:id="@+id/preference_root"
    android:orientation="vertical"
    tools:context=".PreferenceActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/preference_toolbar"
        android:layout_width="match_parent"
        app:navigationIcon="@drawable/ic_arrow_back_24"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:theme="@style/Theme.LinkenUp.ToolBar"
        app:title="@string/preferences"
        app:titleTextColor="?attr/colorOnPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <Button
                android:layout_marginTop="@dimen/preference_preferences_marginTop"
                android:id="@+id/preference_button_about_us"
                android:onClick="onAboutUs"
                android:text="@string/about_us"
                android:layout_width="@dimen/large_button_width"
                style="@style/Button"
                android:theme="@style/Theme.LinkenUp.Button"/>

            <Button
                android:layout_marginTop="@dimen/preference_preferences_marginTop"
                android:onClick="onMap"
                android:id="@+id/preference_button_map"
                android:text="@string/map"
                android:layout_width="@dimen/large_button_width"
                style="@style/Button"
                android:theme="@style/Theme.LinkenUp.Button"/>

            <TextView
                android:textIsSelectable="false"
                android:id="@+id/preference_text_homelayout"
                android:layout_marginStart="@dimen/subtitle_marginTop"
                style="@style/Title"
                android:text="@string/preference_homelayout_title" />

            <CheckBox
                android:textIsSelectable="false"
                android:id="@+id/preference_check_homelayout_img"
                android:onClick="onHomeLayout"
                style="@style/Field"
                android:text="@string/preference_homelayout_img_option" />

            <CheckBox
                android:textIsSelectable="false"
                android:id="@+id/preference_check_homelayout_btn"
                style="@style/Field"
                android:onClick="onHomeLayout"
                android:text="@string/preference_homelayout_btn_option" />

            <CheckBox
                android:textIsSelectable="false"
                android:id="@+id/preference_check_homelayout_smallimg"
                android:onClick="onHomeLayout"
                style="@style/Field"
                android:text="@string/preference_homelayout_smallimg_option" />

            <Switch
                android:textIsSelectable="false"
                android:id="@+id/preference_switch_theme"
                android:text="@string/theme"
                android:layout_marginStart="@dimen/subtitle_marginTop"
                android:layout_marginTop="@dimen/preference_preferences_marginTop"
                android:textSize="@dimen/subtitle_textSize"
                style="@style/Field"
                android:onClick="onTheme"/>

            <Switch
                android:textIsSelectable="false"
                android:id="@+id/preference_switch_imageBorder"
                android:text="@string/imageBorder"
                android:layout_marginStart="@dimen/subtitle_marginTop"
                android:layout_marginTop="@dimen/preference_preferences_marginTop"
                android:textSize="@dimen/subtitle_textSize"
                style="@style/Field"
                android:onClick="onImageBorder"/>

            <LinearLayout
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <CheckBox
                    android:id="@+id/preference_check_imageBorder_red"
                    android:layout_width="@dimen/preference_check_imageBorder_width"
                    android:layout_margin="8dp"
                    android:layout_height="wrap_content"
                    android:onClick="onImageBorder"
                    android:text="@string/red" />

                <CheckBox
                    android:id="@+id/preference_check_imageBorder_green"
                    android:layout_width="@dimen/preference_check_imageBorder_width"
                    android:layout_margin="8dp"
                    android:layout_height="wrap_content"
                    android:onClick="onImageBorder"
                    android:text="@string/green" />

                <CheckBox
                    android:id="@+id/preference_check_imageBorder_blue"
                    android:layout_width="@dimen/preference_check_imageBorder_width"
                    android:layout_margin="8dp"
                    android:layout_height="wrap_content"
                    android:onClick="onImageBorder"
                    android:text="@string/blue" />
            </LinearLayout>

            <Switch
                android:textIsSelectable="false"
                android:id="@+id/preference_switch_floatHome"
                android:text="@string/floatHome"
                android:layout_marginStart="@dimen/subtitle_marginTop"
                android:layout_marginTop="@dimen/preference_preferences_marginTop"
                android:textSize="@dimen/subtitle_textSize"
                style="@style/Field"
                android:onClick="onSwicthHome"/>

            <Button
                android:layout_width="@dimen/button_smallWidth"
                android:layout_marginTop="@dimen/preference_preferences_marginTop"
                style="@style/Button"
                android:text="@string/erase_sqlite"
                android:layout_height="wrap_content"
                android:onClick="onUpgradeSQLite" />

        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/preference_root_floatHome"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_float_buttonSize"
        android:layout_marginTop="@dimen/floatbutton_marginTop">
        <include
            layout="@layout/include_home_floatbutton"/>
    </FrameLayout>

</LinearLayout>